--- a/package.json
+++ b/package.json
@@ -5,9 +5,17 @@
   "scripts": {
     "start": "node app.js"
   },
+  
   "dependencies": {
     "express": "3.4.7",
     "jade": "*",
     "stylus": "*"
   }
+  
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.3.x"
+  }
+  
 }
+
